--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     border: 1px solid black;
+    position: relative;
 }
 
 .backdrop {
@@ -10,14 +11,16 @@
     z-index: 2;
     left: 0;
     top: 0;
-    width: 100%;
+    width: 10%;
     height: 100%;
     overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
     -webkit-animation: fadeIn 1.2s ease-in-out;
     animation: fadeIn 1.2s ease-in-out;
 }
 
-.navmenu {
+#navmenu {
     width: 100%;
     height: 100%;
     display: flex;
@@ -27,6 +30,7 @@
     top: 0;
     left: 0;
     z-index: 1;
+    position: absolute;
 }
 .openIcon {
     font-size: 2rem;
@@ -35,7 +39,7 @@
     color: black;
     margin-left: 3rem;
 }
-.drawableMenu {
+.drawable {
     height: 100%;
     width: 0;
     position: fixed;
