--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,84 +1,51 @@
-#navbar {
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
     margin: 0px;
-    padding: 0px;
-    border: 1px solid black;
-    position: relative;
+    padding: 0px 1%;
+    height: 50px;
+    background-color: yellow;
+    display: flex;
+    z-index: 1000;
 }
-
-.backdrop {
-    display: none;
-    position: fixed;
-    z-index: 2;
-    left: 0;
-    top: 0;
-    width: 10%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    -webkit-animation: fadeIn 1.2s ease-in-out;
-    animation: fadeIn 1.2s ease-in-out;
+.sidebar_icon{
+    flex: 0 0 auto;
+    width: 30px;
+    margin-right: 20px;
 }
-
-#navmenu {
+i {
+    height: 50px;
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    position: absolute;
 }
-.openIcon {
-    font-size: 2rem;
-    cursor: pointer;
-    margin-right: 2rem;
-    color: black;
-    margin-left: 3rem;
-}
-.drawable {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 3;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.drawableMenu a {
-    text-decoration: none;
-    font-size: 1rem;
-    color: #818181;
+
+.logo img {
+    height: 70%;
+    width: auto;
     display: block;
-    transition: 0.3s;
-    margin: 10px 0;
-}
-.drawableMenu a:hover {
-    color: #f1f1f1;
-}
-.drawableMenu .closeIcon {
-    font-size: 3rem;
-    font-weight: 700;
-    color:#C9002B ;
-    padding-right: 1rem;
-}
-.drawableMenu .drawable_close{
-    height: 3rem;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-bottom: 3rem;
 }
 
-.logo {
-    width: 200px;
+.search_bar{
+
+}
+
+.sidebar {
+    position: fixed;
+    padding-top: 10px;
+    top: 50px;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    background-color: purple;
+}
+button {
+    font-size: 20px
+}
+
+button img{
+    height: 30px;
+    width: auto;
+    margin-right: 1rem;
+    justify-content: flex-start;
+
 }
