--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+/*===============================navbar========================================*/
 .navbar {
     position: fixed;
     top: 0;
@@ -11,23 +12,35 @@
     align-items: center;
     z-index: 1000;
 }
-
+.logo {
+    background-color: green;
+}
 .logo img {
     height: 30px;
     width: auto;
     margin-right: 80px;
 }
+.search_bar {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items; center;
+    gap: 20px;
+    padding: 10px;
+    flex-wrap: wrap;
+}
 .search{
     /*기본 정렬*/
     display: flex;
+    width: 70%;
     align-item: center;
     border: 1px solid #ccc;
     overflow: hidden;
     border-radius: 20px;
 }
 .search input {
-    height: 30px;
-    width: auto;
+    height: 35px;
+    width: 100%;
     padding: 3px 15px;
     font-size: 18px;
     border: none;
@@ -35,9 +48,10 @@
 }
 .search button {
     height: 36px;
+    width: 60px;
     margin: 0px;
     padding-left: 10px;
-    padding-right: 0px;
+    padding-right: 10px;
     border: none;
     background-color: light-grey;
     cursor: pointer;
@@ -47,10 +61,21 @@
 .search button img {
     height: 25px;
     width: auto;
+    padding-left: 0px;
 }
 .search.focus {
     border: 2px solid steelblue;
 }
+/*
+@media (max-width: 1400px) {
+    .search {
+        max-width: 100%;
+    }
+}
+*/
+
+
+/*==============================sidebar_mini==================================*/
 .sidebar_mini {
     align-items: center;
     position: fixed;
@@ -63,7 +88,6 @@
     display: flex;              /*내부 정렬*/
     flex-direction: column;     /*세로 방향*/
     gap: 15px;
-
 }
 .sidebar_mini button {
     height: 70px;
@@ -77,8 +101,10 @@
     margin: 0px;
     padding: 0px;
     font-size: 12px;
-
 }
+
+
+/*==============================sidebar==================================*/
 .sidebar {
     position: fixed;
     padding-top: 10px;
@@ -95,7 +121,6 @@
 .sidebar.open {
     left: 0;
 }
-
 .sidebar_icon{
     flex: 0 0 auto;
     width: 30px;
@@ -112,7 +137,6 @@
     font-size: 20px;
     font-weight: 500;
 }
-
 .sidebar button img {
     height: 30px;
     width: auto;
