--- a/stylesheet.css
+++ b/stylesheet.css
@@ -234,7 +234,7 @@
     display: flex;              /*내부 정렬*/
     flex-direction: column;     /*세로 방향*/
     gap: 10px;
-    z-index: 10;
+    z-index: 1003;
     transition: left 0.3s ease;     /*동작 애니메이션*/
 }
 .sidebar.open {
@@ -366,9 +366,49 @@ img.broadcasting{
     background-color: #dddddd;
     cursor: pointer;
 }
-
-
-
+/*===========================비디오 썸네일===================================*/
+.video_list {
+    position: relative;
+    top: 50px;
+    left: 80px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    background-color: white;
+}
+.video_thumbnail {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+.thumbnail_image {
+    width: 100%;
+    border-radius: 12px;
+    object-fit: cover;
+}
+.video_info {
+    display: flex;
+    margin-top: 10px;
+}
+.channel_icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    margin-right: 6px;
+}
+.video_text {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+.video_title {
+    margin: 0;
+}
+.channel_name, .other_info {
+    margin: 0;
+    font-size: 14px;
+}
 
 /*=======================영역 확인용===============================*/
 .sidebar_mini {
