EDIT: edit video contents

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -370,7 +370,7 @@ img.broadcasting{
 .video_list {
     position: relative;
     top: 50px;
-    left: 80px;
+    margin-left: 80px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
@@ -409,6 +409,27 @@ img.broadcasting{
     margin: 0;
     font-size: 14px;
 }
+
+@media (min-width: 1300px) {
+    .video_list {
+        grid-template-columns: repeat(4, 1fr); /* 최대 4개까지만 */
+    }
+}
+
+/*============================video page====================================*/
+./main_contents {
+    margin-top: 80px;
+}
+.main_contents img {
+    height: 40px;
+    width: auto;
+    border-radius: 20px;
+    background-color: #dddd;
+    object-fit: cover;
+}
+
+
+
 
 /*=======================영역 확인용===============================*/
 .sidebar_mini {
